--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link href='//fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/bulma.css" type="text/css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">    
+    <link rel="stylesheet" href="css/owl.theme.default.min.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <!--END CSS-->
 </head>
@@ -41,7 +43,7 @@
     </nav>
     <div class="container is-fluid">
         <div class="content columns is-desktop">
-            <div class="column is-3-desktop">
+            <div class="column is-4-desktop">
                 <article>
                     <h2 class="subtitle">Mission Statement</h2>
                     <p>Adopt Me! Bluegrass Pet Rescue is a non-profit organization guided by the principals of compassion, integrity
@@ -58,107 +60,101 @@
                         deserunt mollit anim id est laborum.</p>
                 </article>
             </div>
-            <div class="column is-6-desktop">
+            <div class="column is-8-desktop">
                 <section>
                     <h2 class="subtitle">Adopt Me<span class="is-small"> - Featured Pets</span></h2>
                     <div id="animals" class="is-flex-tablet columns is-desktop">
                     </div>
                 </section>
-            </div>
-            <div class="column is-3-desktop">
                 <h2 class="subtitle">Recent Tweets</h2>
-                <div class="box">
-                    <article class="media">
-                        <div class="media-left">
-                            <figure class="image is-64x64">
-                                <img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
-                            </figure>
-                        </div>
-                        <div class="media-content">
-                            <div class="content">
-                                <p>
-                                    <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
-                                    <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet
-                                    massa fringilla egestas. Nullam condimentum luctus turpis.
-                                </p>
+                <div class="tweets owl-carousel">
+                    <div class="box item">
+                        <article class="media">
+                            <div class="media-left">
+                                <figure class="image is-64x64">
+                                    <img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
+                                </figure>
                             </div>
-                            <nav class="level">
-                                <div class="level-left">
-                                    <a class="level-item">
-                                        <span class="icon is-small"><i class="fa fa-reply"></i></span>
-                                    </a>
-                                    <a class="level-item">
-                                        <span class="icon is-small"><i class="fa fa-retweet"></i></span>
-                                    </a>
-                                    <a class="level-item">
-                                        <span class="icon is-small"><i class="fa fa-heart"></i></span>
-                                    </a>
+                            <div class="media-content">
+                                <div class="content">
+                                    <p>
+                                        <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit
+                                        amet massa fringilla egestas. Nullam condimentum luctus turpis.
+                                    </p>
                                 </div>
-                            </nav>
-                        </div>
-                    </article>
-                </div>
-                <div class="box">
-                    <article class="media">
-                        <div class="media-left">
-                            <figure class="image is-64x64">
-                                <img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
-                            </figure>
-                        </div>
-                        <div class="media-content">
-                            <div class="content">
-                                <p>
-                                    <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
-                                    <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet
-                                    massa fringilla egestas. Nullam condimentum luctus turpis.
-                                </p>
+                                <nav class="level is-mobile">
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-reply"></i></span>
+                                        </a>
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-retweet"></i></span>
+                                        </a>
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-heart"></i></span>
+                                        </a>
+                                </nav>
                             </div>
-                            <nav class="level">
-                                <div class="level-left">
-                                    <a class="level-item">
-                                        <span class="icon is-small"><i class="fa fa-reply"></i></span>
-                                    </a>
-                                    <a class="level-item">
-                                        <span class="icon is-small"><i class="fa fa-retweet"></i></span>
-                                    </a>
-                                    <a class="level-item">
-                                        <span class="icon is-small"><i class="fa fa-heart"></i></span>
-                                    </a>
-                                </div>
-                            </nav>
-                        </div>
-                    </article>
-                </div>
-                <div class="box">
-                    <article class="media">
-                        <div class="media-left">
-                            <figure class="image is-64x64">
-                                <img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
-                            </figure>
-                        </div>
-                        <div class="media-content">
-                            <div class="content">
-                                <p>
-                                    <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
-                                    <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet
-                                    massa fringilla egestas. Nullam condimentum luctus turpis.
-                                </p>
+                        </article>
+                    </div>
+                    <div class="box item">
+                        <article class="media">
+                            <div class="media-left">
+                                <figure class="image is-64x64">
+                                    <img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
+                                </figure>
                             </div>
-                            <nav class="level">
-                                <div class="level-left">
-                                    <a class="level-item">
-                                        <span class="icon is-small"><i class="fa fa-reply"></i></span>
-                                    </a>
-                                    <a class="level-item">
-                                        <span class="icon is-small"><i class="fa fa-retweet"></i></span>
-                                    </a>
-                                    <a class="level-item">
-                                        <span class="icon is-small"><i class="fa fa-heart"></i></span>
-                                    </a>
+                            <div class="media-content">
+                                <div class="content">
+                                    <p>
+                                        <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit
+                                        amet massa fringilla egestas. Nullam condimentum luctus turpis.
+                                    </p>
                                 </div>
-                            </nav>
-                        </div>
-                    </article>
+                                <nav class="level is-mobile">
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-reply"></i></span>
+                                        </a>
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-retweet"></i></span>
+                                        </a>
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-heart"></i></span>
+                                        </a>
+                                </nav>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="box item">
+                        <article class="media">
+                            <div class="media-left">
+                                <figure class="image is-64x64">
+                                    <img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
+                                </figure>
+                            </div>
+                            <div class="media-content">
+                                <div class="content">
+                                    <p>
+                                        <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
+                                        <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit
+                                        amet massa fringilla egestas. Nullam condimentum luctus turpis.
+                                    </p>
+                                </div>
+                                <nav class="level is-mobile">
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-reply"></i></span>
+                                        </a>
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-retweet"></i></span>
+                                        </a>
+                                        <a class="level-item">
+                                            <span class="icon is-small"><i class="fa fa-heart"></i></span>
+                                        </a>
+                                </nav>
+                            </div>
+                        </article>
+                    </div>
                 </div>
             </div>
         </div>
@@ -166,7 +162,7 @@
 
     <!--JAVASCRIPT-->
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src="js/flickr.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script src="js/script.js"></script>
     <!--END JAVASCRIPT-->
 </body>
